// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id         String       @unique
  name       String
  ci         Int          @unique
  lastname   String
  email      String       @unique
  password   String
  permission Permission[]
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt
}

model Permission {
  id          Int      @id @default(autoincrement())
  date        DateTime
  quantity    Int
  amount      Float
  civ         String
  observation String
  receiptNo   String
  status      String

  ownerId        String
  userId         String
  constructionId String        @unique
  owner          Owner?        @relation(fields: [ownerId], references: [id])
  user           User?         @relation(fields: [userId], references: [id])
  construction   Construction? @relation(fields: [constructionId], references: [id])
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
}

model Construction {
  id          String @unique
  address     String
  type        String
  floorsNo    Int
  manager     String
  engineer    String
  company     String
  destination String

  areaId         Int         @unique
  area           Area        @relation(fields: [areaId], references: [id])
  amountId       Int         @unique
  amount         Amount      @relation(fields: [amountId], references: [id])
  population     Int
  sanitaryPermit String
  Permission     Permission?
  createdAt      DateTime    @default(now())
  updatedAt      DateTime    @updatedAt
}

model Area {
  id               Int           @id @default(autoincrement())
  landArea         Float
  constructionArea Float
  Construction     Construction?
}

model Amount {
  id           Int           @id @default(autoincrement())
  landAmount   Float
  workAmount   Float
  tax          Float
  Construction Construction?
}

model Owner {
  id         String       @unique
  ci         Int          @unique
  name       String
  address    String
  permission Permission[]
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt
}
